test/invalid/ClassMalFormada/ClassMalFormada.plume
/**
 * 
 * Class esta mal escrito
 * @author 37060, Roberto Silva
 */
clas ClassMalFormada extends Object is
	
	method main : () -> String is
    	soma(10).toString()
	
	method soma : (limite : Integer) -> Integer is
    	if limite == 0
    	then limite
    	else limite + soma(limite - 1)